name:                ixsetpk-typed
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/czechow-shadow/ixsetpk-typed#readme
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.IxSetPk.Typed
  build-depends:       base >= 4.9 && < 5
                     , ixset-typed >= 0.3 && < 0.4
                     , containers >= 0.5 && < 0.6
  default-language:    Haskell2010


test-suite ixsetpk-typed-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -Wall
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , ixsetpk-typed
                     , ixset-typed
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-hspec
                     , HUnit
                     , QuickCheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/czechow-shadow/ixsetpk-typed
